# spraypaint

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
spraypaint/: Cargo.toml
spraypaint-macros/: Cargo.toml
spraypaint-macros/src/: lib.rs
spraypaint/examples/: basic.rs  detect.rs  gradient.rs  paint_macro.rs
spraypaint/src/: ansi.rs  color.rs  detect.rs  ext.rs  gradient.rs  lib.rs  style.rs  styled.rs  utils.rs
spraypaint/tests/: integration.rs
