[package]
name = "spraypaint-macros"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
description = "Procedural macros for the spraypaint terminal styling crate"
license = "MIT"
documentation = "https://docs.rs/spraypaint-macros"
readme = "../README.md"
keywords = ["terminal", "color", "ansi", "macro", "proc-macro"]
categories = ["command-line-interface"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
