[package]
name = "spraypaint"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Terminal string styling for Rust"
license = "MIT"
documentation = "https://docs.rs/spraypaint"
readme = "../README.md"
keywords = ["terminal", "color", "ansi", "styling", "cli"]
categories = ["command-line-interface"]

[dependencies]
spraypaint-macros = { version = "0.1.0", path = "../spraypaint-macros" }
bitflags = "2"
arrayvec = { version = "0.7", default-features = false }

[dev-dependencies]
